# proassist

./: .cursorrules  .gitignore  AUTO_UPDATE_INTEGRATION.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  dual_screen_windoes.MD  env.local.example  index.html  package-lock.json  package.json  requirement.md  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: dev-nightly.yml  release.yml
Samples/moonshine-web/: package-lock.json
Samples/realtime-whisper-webgpu/: package-lock.json
Samples/whisper-node/: index.js
developer-notes/: DEVELOPER_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md
developer-notes/artifacts/: README.md  bible-pacer-functions.ts  bible-paraphrase-functions.ts  bible-reference-parser-utils.ts  bible-search-functions.ts  transcription-functions.ts
docs/: CNAME  ONBOARDING.md  index.html
files/: simple_slide_1.txt  simple_slide_2.txt
public/: api-docs.html  api-openapi.json  browser-transcription.html  display.html  live-slides.html  schedule-view.html  window.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window_commands.rs
src/components/: AIAssistantSettingsModal.tsx  AIAutomationDropdown.tsx  AISettingsForm.tsx  ActivatePresentationModal.tsx  AddTemplateModal.tsx  ChatMessage.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DisplayLayoutEditorModal.tsx  DisplaySettings.tsx  ErrorBoundary.tsx  FeaturesSettings.tsx  GenerateAIPromptModal.tsx  GlobalChatButton.tsx  GlobalChatDrawer.tsx  GlobalTemplatesSettings.tsx  IconPickerModal.tsx  ImageScheduleUploadModal.tsx  ImportFirebaseConfigModal.tsx  ImportFromLiveSlidesModal.tsx  ImportFromNetworkModal.tsx  ImportModal.tsx  LiveSlidesSettings.tsx  LiveTestimoniesSettings.tsx  LoadScheduleModal.tsx  LogViewer.tsx  MidiSettings.tsx  MonitorSelectDropdown.tsx  NetworkSettings.tsx  OfflineModelLoadingToast.tsx  OfflineModelManager.tsx  PlaylistPane.tsx  ProPresenterAITemplatesSettings.tsx  ProPresenterSettings.tsx  ProPresenterSettingsForm.tsx  RecorderSettings.tsx  RemoteAccessLinkModal.tsx  RenameDialog.tsx  RenameModal.tsx  ScheduleAutomationModal.tsx  (+15 more)
src/contexts/: StageAssistContext.tsx
src/hooks/: useAutoFontSize.ts  useDebouncedEffect.ts  useNetworkSync.ts
src/mockData/: mockGlobalSettings.ts  mockTemplates.ts
src/pages/: AudienceDisplayPage.tsx  AudienceDisplayTestWindow.tsx  HelpPage.tsx  LiveSlidesNotepad.tsx  LiveSlidesPage.tsx  MainApplicationPage.tsx  MediaView.tsx  MonitorIdentifyPage.tsx  RecorderPage.tsx  SettingsPage.tsx  SmartVasisPage.tsx  SmartVersesPage.tsx  StageAssistPage.tsx  TimerPage.tsx  WindowControlPage.tsx
src/services/: aiService.ts  apiService.ts  appActionService.ts  assemblyaiTokenService.ts  bibleService.ts  bibleTextSearchService.ts  displayService.ts  firebaseService.ts  globalAIService.ts  httpAutomationService.ts  liveSlideFollow.ts  liveSlideService.ts  midiService.ts  nativeWhisperModelService.ts  networkSyncService.ts  offlineModelPreloadService.ts  (+14 more)
(+63 files in other folders)
