[package]
name = "proassist"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "proassist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proassist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
base64 = "0.22"
hound = "3.5"  # WAV file writing for native audio recording
chrono = "0.4"  # Timestamp formatting for filenames
log = "0.4"
wry = "0.35"
tao = "0.25"

# WebSocket server for Live Slides
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"

# Warp HTTP server for schedule view and sync
warp = "0.3"
rust-embed = "8"
mime_guess = "2"

# Global state management
lazy_static = "1.4"

# HTTP client for AssemblyAI API
reqwest = { version = "0.11", features = ["json"] }

# MIDI support
midir = "0.10"

# Font enumeration
fontdb = "0.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[[bin]]
name = "proassist"
path = "src/main.rs"
